Small edits to documentation

--- a/documentation/source/usersGuide/usersGuide_02_notes.ipynb
+++ b/documentation/source/usersGuide/usersGuide_02_notes.ipynb
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Okay, so now you now enough about modules and\n",
+    "Okay, so now you know enough about modules and\n",
     "objects.  Let's create a `note.Note` object.  How about the F at the top of the\n",
     "treble clef staff:"
    ]
