--- a/documentation/source/usersGuide/usersGuide_04_stream1.ipynb
+++ b/documentation/source/usersGuide/usersGuide_04_stream1.ipynb
@@ -936,7 +936,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want instead of passing the class `note.Note` you could instead pass the string `\"Note\"`."
+    "If you want, instead of passing the class `note.Note` you could instead pass the string `\"Note\"`."
    ]
   },
   {
@@ -1106,7 +1106,7 @@
    "source": [
     "### Separating out elements by offset with `.getElementsByOffset()`\n",
     "\n",
-    "The :meth:`~music21.stream.Stream.getElementsByOffset` method returns a Stream of all elements that fall either at a single offset or within a range of two offsets provided as an argument. In both cases a Stream is returned."
+    "The :meth:`~music21.stream.Stream.getElementsByOffset` method lets you gather all elements that fall either at a single offset or within a range of two offsets provided as an argument."
    ]
   },
   {
