--- a/documentation/source/usersGuide/usersGuide_05_listsOfLists.ipynb
+++ b/documentation/source/usersGuide/usersGuide_05_listsOfLists.ipynb
@@ -305,7 +305,7 @@
    "metadata": {},
    "source": [
     "That did it!  How does it work?  Well we look at each \"thing\" in `listB` -- we\n",
-    "call it \"thing\" here, because we're not sure if it's a number of a list.  Then\n",
+    "call it \"thing\" here, because we're not sure if it's a number or a list.  Then\n",
     "in the next line ``if isinstance(thing, list):`` checks if the thing is a list.\n",
     "If that is `True` then we get to an inner loop, where we look at \"thing\" (which\n",
     "in this case is `listA`, but the program doesn't know that) and get the\n",
