--- a/documentation/source/usersGuide/usersGuide_11_corpusSearching.ipynb
+++ b/documentation/source/usersGuide/usersGuide_11_corpusSearching.ipynb
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To work with all those pieces, you can parse treat the MetadataBundle\n",
+    "To work with all those pieces, you can treat the MetadataBundle\n",
     "like a list and call ``.parse()`` on any element:"
    ]
   },
