--- a/documentation/source/usersGuide/usersGuide_12_music21object.ipynb
+++ b/documentation/source/usersGuide/usersGuide_12_music21object.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# User's Guide, Chapter 12: Getting Back to Basics: The Music21Object\n",
     "\n",
-    "Almost everything that we've been working with so far, `Note` objects, `Chord` objects, `Stream` objects, etc., are subclasses of a object that, for lack of a better name, is called :class:`~music21.base.Music21Object`. \n",
+    "Almost everything that we've been working with so far, `Note` objects, `Chord` objects, `Stream` objects, etc., are subclasses of an object that, for lack of a better name, is called :class:`~music21.base.Music21Object`. \n",
     "\n",
     "A `Music21Object` is something that can go in a `Stream`, knows where it is in a Stream, and has a `Duration` at `.duration`.  \n",
     "\n",
