--- a/documentation/source/usersGuide/usersGuide_29_spanners.ipynb
+++ b/documentation/source/usersGuide/usersGuide_29_spanners.ipynb
@@ -198,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Depending on what you want to use the spanner for, you might not need to include all the intermediary notes in a spanner.  For instance, let's slur the last four notes on the piece, specifying only the high C and the final G.  We'll put in the last measure."
+    "Depending on what you want to use the spanner for, you might not need to include all the intermediary notes in a spanner.  For instance, let's slur the last four notes on the piece, specifying only the high C and the final G.  We'll put it in the second measure."
    ]
   },
   {
