--- a/documentation/source/usersGuide/usersGuide_99_Table_of_Contents.ipynb
+++ b/documentation/source/usersGuide/usersGuide_99_Table_of_Contents.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "This is the table of contents for the User's Guide, where topics will be linked and added as the topics are written.\n",
     "\n",
-    "The User's Guide is will form the backbone for an eventual book on `music21` by the principal investigator, Michael Scott Cuthbert, so please do not edit it except for correcting code, fixing typos, etc. without consulting with the author.  Thanks!\n",
+    "The User's Guide will form the backbone for an eventual book on `music21` by the principal investigator, Michael Scott Cuthbert, so please do not edit it except for correcting code, fixing typos, etc. without consulting with the author.  Thanks!\n",
     "\n",
     ":ref:`Introduction <what>`\n",
     "\n",
