lint and fraction

--- a/documentation/source/developerReference/developerGuidelines.ipynb
+++ b/documentation/source/developerReference/developerGuidelines.ipynb
@@ -145,14 +145,17 @@
     "Conventions:\n",
     "\n",
     "  - **Strings MUST be 'single-quoted', but \"double quotes\" are allowed internally**\n",
-    "    - This rule applies to triple quotes and doc strings also, contrary to PEP 257.\n",
-    "    - Docstrings must begin and end on their own lines.  No one-line doc-strings or text\n",
+    "    - This rule applies to triple quotes and docstrings also, contrary to PEP 257.\n",
+    "    - Docstrings must begin and end on their own lines.  No one-line docstrings or text\n",
     "      immediately following the triple quotes.\n",
     "    - When there is a hyphen or single quote in the string, double quotes should be used,\n",
     "      not escaping/backslashing.\n",
     "    - For long streams of TinyNotation or Lilypond code, which both use single quotes to indicate octave,\n",
     "       triple single quotes around the string are better than double quotes.  Internal whitespace\n",
     "       rarely matters in those formats.\n",
+    "    - Before v10 concatenating strings without a plus sign was discouraged. I've changed my mind,\n",
+    "       and am \"letting Python be Python\" now especially when three or more lines are involved.\n",
+    "       However, use a + sign if concatenation is mixed with different comma-separated arguments.\n",
     "    - Documentation should follow quoting in American English grammar when not\n",
     "       discussing code.  So for instance, a quotation in documentation is in double quotes.\n",
     "  - Variable names:\n",
@@ -163,7 +166,8 @@
     "  - Line lengths are capped at 100, but if approaching this limit, look for ways to avoid one-lining.\n",
     "    - if it's easy to split your line into two which are both under 80 characters, do so.\n",
     "  - Line continuation characters (`\\`) are not allowed; use open parentheses.\n",
-    "  - Prefer f-strings to `.format()`.  The `%` interpolation is no longer allowed.\n",
+    "  - Greatly prefer f-strings to `.format()`.  The `%` interpolation is no longer allowed.\n",
+    "    - `.format()` is only to be used when a repeated format string is involved.\n",
     "  - Annotating types is **required** in new code, and encouraged to be added to older code.\n",
     "    - e.g. `self.counter: int = 0` or `def makeNoises() -> list['noise.Noise']:`\n",
     "    - The typing library should always be imported as `t`.\n",
@@ -193,7 +197,8 @@
     "      manipulation of the original object.  When `inPlace` is True, nothing should be returned\n",
     "      (not true for `music21j` since passing through objects is so expected in JavaScript thanks\n",
     "      to JQuery and other libraries).  Use the `@overload` decorator to show how this parameter\n",
-    "      affects the return value -- Python makes this a bit hard, but see for instance, :meth:`~music21.stream.base.Stream.getElementsByClass` for an example of how to use this.\n",
+    "      affects the return value -- Python makes this a bit hard, but see for\n",
+    "      instance, :meth:`~music21.stream.base.Stream.getElementsByClass` for an example of how to use this.\n",
     "  - Use descriptive pull request titles (rather than GitHub's default \"Update pitch.py\")\n",
     "    - Do not have a PR title so long that it cannot be seen in one line.  Simplify and\n",
     "      rewrite and go into more detail in the description.  I depend on skimming PR titles\n",
