Ruff replaces flake8
Faster and more the future.

--- a/documentation/source/about/what.ipynb
+++ b/documentation/source/about/what.ipynb
@@ -102,7 +102,7 @@
     }
    ],
    "source": [
-    "n = note.Note(\"D#3\")\n",
+    "n = note.Note('D#3')\n",
     "n.duration.type = 'half'\n",
     "n.show()"
    ]
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "littleMelody = converter.parse(\"tinynotation: 3/4 c4 d8 f g16 a g f#\")\n",
+    "littleMelody = converter.parse('tinynotation: 3/4 c4 d8 f g16 a g f#')\n",
     "littleMelody.show()"
    ]
   },
