--- a/documentation/source/developerReference/installJupyter.ipynb
+++ b/documentation/source/developerReference/installJupyter.ipynb
@@ -83,7 +83,7 @@
     }
    ],
    "source": [
-    "c = chord.Chord(\"C4 E4 G4\")\n",
+    "c = chord.Chord('C4 E4 G4')\n",
     "c.isConsonant()"
    ]
   },
