--- a/documentation/source/developerReference/testing.ipynb
+++ b/documentation/source/developerReference/testing.ipynb
@@ -73,7 +73,7 @@
     }
    ],
    "source": [
-    "if __name__ == \"__main__\":\n",
+    "if __name__ == '__main__':\n",
     "    import music21\n",
     "    music21.mainTest(Test)"
    ]
@@ -104,17 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from music21 import exceptions21\n",
+    "\n",
     "def flipStemDirection(n):\n",
     "    '''\n",
     "    Takes in a note with a `.stemDirection` of 'up' or 'down'\n",
     "    and transforms it to the other.  Does nothing if the `stemDirection` is not defined.\n",
-    "    \n",
+    "\n",
     "    Notes without stem direction of `up` or `down` are left alone:\n",
-    "    \n",
+    "\n",
     "    >>> n = note.Note()\n",
     "    >>> n.stemDirection\n",
     "    'unspecified'\n",
@@ -131,9 +133,9 @@
     "    >>> flipStemDirection(n)\n",
     "    >>> n.stemDirection\n",
     "    'up'\n",
-    "    \n",
+    "\n",
     "    Objects without `.stemDirection` raise a Music21Exception\n",
-    "    \n",
+    "\n",
     "    >>> r = note.Rest()\n",
     "    >>> flipStemDirection(r)\n",
     "    Traceback (most recent call last):\n",
@@ -142,8 +144,8 @@
     "    try:\n",
     "        sd = n.stemDirection\n",
     "    except AttributeError:\n",
-    "        raise exceptions21.Music21Exception(\"flipStemDirection only works on Notes\")\n",
-    "    \n",
+    "        raise exceptions21.Music21Exception('flipStemDirection only works on Notes')\n",
+    "\n",
     "    if sd == 'up':\n",
     "        n.stemDirection = 'down'\n",
     "    elif sd == 'down':\n",
@@ -238,7 +240,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -252,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.13.9"
   },
   "pycharm": {
    "stem_cell": {
@@ -265,5 +267,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
