--- a/documentation/source/testsAndInProgress/devTest_inversions.ipynb
+++ b/documentation/source/testsAndInProgress/devTest_inversions.ipynb
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cMaj = chord.Chord(\"C3 E3 G3\")\n",
+    "cMaj = chord.Chord('C3 E3 G3')\n",
     "s = stream.Stream()\n",
     "for i in range(20):\n",
     "    inv = i % 3\n",
@@ -250,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cMaj = chord.Chord(\"C1 G1 E2\")\n",
+    "cMaj = chord.Chord('C1 G1 E2')\n",
     "s = stream.Stream()\n",
     "for i in range(7):\n",
     "    inv = i % 3\n",
@@ -291,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cMaj = chord.Chord(\"C3 E3 G3 B-3 D-4 F#4\")\n",
+    "cMaj = chord.Chord('C3 E3 G3 B-3 D-4 F#4')\n",
     "s = stream.Stream()\n",
     "for i in range(17):\n",
     "    inv = i % 6\n",
@@ -379,7 +379,7 @@
     }
    ],
    "source": [
-    "germ6 = chord.Chord(\"A-3 C4 E-4 F#4\")\n",
+    "germ6 = chord.Chord('A-3 C4 E-4 F#4')\n",
     "s = stream.Stream()\n",
     "print(germ6.inversion())\n",
     "for i in range(12):\n",
