--- a/documentation/source/testsAndInProgress/devTest_timespans.ipynb
+++ b/documentation/source/testsAndInProgress/devTest_timespans.ipynb
@@ -550,8 +550,7 @@
     "for v in tsColSmall.iterateVerticalities():\n",
     "    if v:\n",
     "        print(v)\n",
-    "        print(v.getAllVoiceLeadingQuartets())\n",
-    "    "
+    "        print(v.getAllVoiceLeadingQuartets())\n"
    ]
   },
   {
