--- a/documentation/source/testsAndInProgress/usersGuide_36_clientWeakref.ipynb
+++ b/documentation/source/testsAndInProgress/usersGuide_36_clientWeakref.ipynb
@@ -64,7 +64,7 @@
    ],
    "source": [
     "from music21 import *\n",
-    "n = note.Note(\"F##2\")\n",
+    "n = note.Note('F##2')\n",
     "n.duration.client"
    ]
   },
