--- a/documentation/source/usersGuide/usersGuide_03_pitches.ipynb
+++ b/documentation/source/usersGuide/usersGuide_03_pitches.ipynb
@@ -1157,7 +1157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "otherNote = note.Note(\"F6\")\n",
+    "otherNote = note.Note('F6')\n",
     "otherNote.lyric = \"I'm the Queen of the Night!\""
    ]
   },
