--- a/documentation/source/usersGuide/usersGuide_04_stream1.ipynb
+++ b/documentation/source/usersGuide/usersGuide_04_stream1.ipynb
@@ -52,8 +52,8 @@
    "outputs": [],
    "source": [
     "from music21 import *\n",
-    "note1 = note.Note(\"C4\")\n",
-    "note2 = note.Note(\"F#4\")"
+    "note1 = note.Note('C4')\n",
+    "note2 = note.Note('F#4')"
    ]
   },
   {
@@ -257,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "note3 = note.Note(\"B-2\")"
+    "note3 = note.Note('B-2')"
    ]
   },
   {
@@ -1842,7 +1842,7 @@
    "outputs": [],
    "source": [
     "biggerStream = stream.Stream()\n",
-    "note2 = note.Note(\"D#5\")\n",
+    "note2 = note.Note('D#5')\n",
     "biggerStream.insert(0, note2)"
    ]
   },
@@ -1888,7 +1888,7 @@
     }
    ],
    "source": [
-    "biggerStream.show('text') "
+    "biggerStream.show('text')"
    ]
   },
   {
