--- a/documentation/source/usersGuide/usersGuide_06_stream2.ipynb
+++ b/documentation/source/usersGuide/usersGuide_06_stream2.ipynb
@@ -27,10 +27,10 @@
    "source": [
     "from music21 import *\n",
     "\n",
-    "note1 = note.Note(\"C4\")\n",
+    "note1 = note.Note('C4')\n",
     "note1.duration.type = 'half'\n",
-    "note2 = note.Note(\"F#4\")\n",
-    "note3 = note.Note(\"B-2\")\n",
+    "note2 = note.Note('F#4')\n",
+    "note3 = note.Note('B-2')\n",
     "\n",
     "stream1 = stream.Stream()\n",
     "stream1.id = 'some notes'\n",
@@ -39,7 +39,7 @@
     "stream1.append(note3)\n",
     "\n",
     "biggerStream = stream.Stream()\n",
-    "note2 = note.Note(\"D#5\")\n",
+    "note2 = note.Note('D#5')\n",
     "biggerStream.insert(0, note2)\n",
     "biggerStream.append(stream1)"
    ]
@@ -322,11 +322,11 @@
    "outputs": [],
    "source": [
     "class Japan:\n",
-    "    food = \"sushi\"\n",
-    "    drink = \"sake\"\n",
+    "    food = 'sushi'\n",
+    "    drink = 'sake'\n",
     "\n",
     "class Okinawa(Japan):\n",
-    "    evenBetterFood = \"spam potstickers\""
+    "    evenBetterFood = 'spam potstickers'"
    ]
   },
   {
@@ -797,15 +797,15 @@
     "p1 = stream.Part(id='part1')\n",
     "\n",
     "m01 = stream.Measure(number=1)\n",
-    "m01.append(note.Note('C', type=\"whole\"))\n",
+    "m01.append(note.Note('C', type='whole'))\n",
     "m02 = stream.Measure(number=2)\n",
-    "m02.append(note.Note('D', type=\"whole\"))\n",
+    "m02.append(note.Note('D', type='whole'))\n",
     "p0.append([m01, m02])\n",
     "\n",
     "m11 = stream.Measure(number=1)\n",
-    "m11.append(note.Note('E', type=\"whole\"))\n",
+    "m11.append(note.Note('E', type='whole'))\n",
     "m12 = stream.Measure(number=2)\n",
-    "m12.append(note.Note('F', type=\"whole\"))\n",
+    "m12.append(note.Note('F', type='whole'))\n",
     "p1.append([m11, m12])\n",
     "\n",
     "s.insert(0, p0)\n",
