--- a/documentation/source/usersGuide/usersGuide_07_chords.ipynb
+++ b/documentation/source/usersGuide/usersGuide_07_chords.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "from music21 import *\n",
-    "cMinor = chord.Chord([\"C4\",\"G4\",\"E-5\"]) "
+    "cMinor = chord.Chord(['C4','G4','E-5'])"
    ]
   },
   {
@@ -471,7 +471,7 @@
     }
    ],
    "source": [
-    "cMajor = chord.Chord([\"E3\",\"C4\",\"G4\"])\n",
+    "cMajor = chord.Chord(['E3','C4','G4'])\n",
     "cMajor.inversion()"
    ]
   },
@@ -1050,7 +1050,7 @@
     }
    ],
    "source": [
-    "e7 = chord.Chord(\"E4 G#4 B4 D5\")\n",
+    "e7 = chord.Chord('E4 G#4 B4 D5')\n",
     "e7.show()"
    ]
   },
@@ -1083,7 +1083,7 @@
     }
    ],
    "source": [
-    "es = chord.Chord(\"E- G B-\")\n",
+    "es = chord.Chord('E- G B-')\n",
     "es.show()"
    ]
   },
@@ -1116,7 +1116,7 @@
     }
    ],
    "source": [
-    "fMajor = chord.Chord(\"F A C\")\n",
+    "fMajor = chord.Chord('F A C')\n",
     "fMajor.show()"
    ]
   },
