--- a/documentation/source/usersGuide/usersGuide_12_music21object.ipynb
+++ b/documentation/source/usersGuide/usersGuide_12_music21object.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "from music21 import *\n",
     "\n",
-    "p = pitch.Pitch(\"A-2\")\n",
+    "p = pitch.Pitch('A-2')\n",
     "s = stream.Stream()\n",
     "s.insert(0, p)"
    ]
@@ -327,9 +327,9 @@
     "s = stream.Stream()\n",
     "s.append(clef.TrebleClef())\n",
     "s.append(meter.TimeSignature('3/4'))\n",
-    "s.append(note.Note(\"A\"))\n",
+    "s.append(note.Note('A'))\n",
     "s.append(note.Rest())\n",
-    "s.append(note.Note(\"B\"))\n",
+    "s.append(note.Note('B'))\n",
     "\n",
     "for element in s.getElementsByClass('Note'):\n",
     "    print(element)"
@@ -545,7 +545,7 @@
     }
    ],
    "source": [
-    "n = note.Note(\"C#4\")\n",
+    "n = note.Note('C#4')\n",
     "n.id"
    ]
   },
@@ -837,7 +837,7 @@
    "source": [
     "for x in s.getElementsByGroup('black_key'):\n",
     "    x.notehead = 'circle-x'\n",
-    "    \n",
+    "\n",
     "s.show()"
    ]
   },
