--- a/documentation/source/usersGuide/usersGuide_15_key.ipynb
+++ b/documentation/source/usersGuide/usersGuide_15_key.ipynb
@@ -1752,7 +1752,7 @@
    "source": [
     "out = stream.Part()\n",
     "for i in range(0, 8):\n",
-    "    pitchStream = converter.parse(\"tinyNotation: 4/4 c8 e d f e g f a g e f d c e c4\")\n",
+    "    pitchStream = converter.parse('tinyNotation: 4/4 c8 e d f e g f a g e f d c e c4')\n",
     "\n",
     "    if i != 0:\n",
     "        # remove redundant clefs and time signature\n",
