--- a/documentation/source/usersGuide/usersGuide_16_tinyNotation.ipynb
+++ b/documentation/source/usersGuide/usersGuide_16_tinyNotation.ipynb
@@ -98,7 +98,7 @@
     }
    ],
    "source": [
-    "s = converter.parse(\"tinyNotation: 3/4 CC4 C4 c4\")\n",
+    "s = converter.parse('tinyNotation: 3/4 CC4 C4 c4')\n",
     "s.show()"
    ]
   },
@@ -684,7 +684,7 @@
     "        cs = harmony.ChordSymbol(n.pitch.name + self.modifierData)\n",
     "        cs.duration = n.duration\n",
     "        return cs\n",
-    "    \n",
+    "\n",
     "tnc.modifierUnderscore = HarmonyModifier\n",
     "tnc.load('4/4 C2_maj7 D4_m E-_sus4')\n",
     "tnc.parse().stream.show('text')"
@@ -732,7 +732,7 @@
     "        cs = harmony.ChordSymbol(n.pitch.name + self.modifierData)\n",
     "        self.parent.stream.append(cs)\n",
     "        return n\n",
-    "    \n",
+    "\n",
     "tnc.modifierUnderscore = HarmonyModifier\n",
     "tnc.load('4/4 C2_maj7 D4_m E-_sus4')\n",
     "tnc.parse().stream.show()"
@@ -867,20 +867,20 @@
     "        ch = chord.Chord(self.affectedTokens)\n",
     "        ch.duration = self.affectedTokens[0].duration\n",
     "        return ch\n",
-    "    \n",
+    "\n",
     "tnc.bracketStateMapping['chord'] = ChordState\n",
-    "tnc.load(\"2/4 C4 chord{C4 e g} F.4 chord{D8 F# A}\")\n",
+    "tnc.load('2/4 C4 chord{C4 e g} F.4 chord{D8 F# A}')\n",
     "tnc.parse().stream.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "sphinx_links": {
-     "any": true
-    },
     "pycharm": {
      "name": "#%% md\n"
+    },
+    "sphinx_links": {
+     "any": true
     }
    },
    "source": [
