--- a/documentation/source/usersGuide/usersGuide_19_duration2.ipynb
+++ b/documentation/source/usersGuide/usersGuide_19_duration2.ipynb
@@ -145,7 +145,7 @@
     "startType = '2048th'\n",
     "try:\n",
     "    while True:\n",
-    "        print(startType, end=\", \")\n",
+    "        print(startType, end=', ')\n",
     "        startType = duration.nextLargerType(startType)\n",
     "except duration.DurationException:\n",
     "    pass"
@@ -975,12 +975,12 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "tags": [
-     "nbval-ignore-output"
-    ],
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": [
+     "nbval-ignore-output"
+    ]
    },
    "outputs": [
     {
@@ -1455,11 +1455,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "sphinx_links": {
-     "any": true
-    },
     "pycharm": {
      "name": "#%% md\n"
+    },
+    "sphinx_links": {
+     "any": true
     }
    },
    "source": [
@@ -1492,12 +1492,12 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
-    "tags": [
-     "nbval-ignore-output"
-    ],
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": [
+     "nbval-ignore-output"
+    ]
    },
    "outputs": [
     {
@@ -2179,11 +2179,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "sphinx_links": {
-     "any": true
-    },
     "pycharm": {
      "name": "#%% md\n"
+    },
+    "sphinx_links": {
+     "any": true
     }
    },
    "source": [
