--- a/documentation/source/usersGuide/usersGuide_22_graphing.ipynb
+++ b/documentation/source/usersGuide/usersGuide_22_graphing.ipynb
@@ -295,7 +295,7 @@
    ],
    "source": [
     "#_DOCS_SHOW schoenberg.plot('scatter', 'quarterLength', 'pitch', title='See the G and B!')\n",
-    "_ = schoenberg.plot('scatter', 'quarterLength', 'pitch', title='See the G and B!', returnInNotebook=True)  #_DOCS_HIDE"
+    "_ = schoenberg.plot('scatter', 'quarterLength', 'pitch', title='See the G and B!', returnInNotebook=True)  #_DOCS_HIDE  # noqa: E501"
    ]
   },
   {
@@ -590,8 +590,9 @@
     }
    ],
    "source": [
-    "#_DOCS_SHOW verdi.measures(1, 10).plot('scatterweighted', 'pitch', 'quarterLength')\n",
-    "_ = verdi.measures(1, 10).plot('scatterweighted', 'pitch', 'quarterLength', returnInNotebook=True)  #_DOCS_HIDE"
+    "excerpt = verdi.measures(1, 10)\n",
+    "#_DOCS_SHOW excerpt.plot('scatterweighted', 'pitch', 'quarterLength')\n",
+    "_ = excerpt.plot('scatterweighted', 'pitch', 'quarterLength', returnInNotebook=True)  #_DOCS_HIDE  # noqa: E501"
    ]
   },
   {
@@ -1229,7 +1230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
