--- a/documentation/source/usersGuide/usersGuide_28_lyricSearcher.ipynb
+++ b/documentation/source/usersGuide/usersGuide_28_lyricSearcher.ipynb
@@ -121,7 +121,7 @@
    "source": [
     "allText = text.assembleLyrics(cantus)\n",
     "if 'Domine' in allText:\n",
-    "    print(\"Yup!\")"
+    "    print('Yup!')"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "domineResults = ls.search(\"Domine\")"
+    "domineResults = ls.search('Domine')"
    ]
   },
   {
@@ -560,7 +560,7 @@
     "allPitchPSes = []\n",
     "for thisNote in cantus.recurse().notes:\n",
     "    allPitchPSes.append(thisNote.pitch.ps)\n",
-    "    \n",
+    "\n",
     "mean(allPitchPSes), median(allPitchPSes)"
    ]
   },
