--- a/documentation/source/usersGuide/usersGuide_30_examples3.ipynb
+++ b/documentation/source/usersGuide/usersGuide_30_examples3.ipynb
@@ -304,9 +304,9 @@
     "    totalSimulations = inCounter['higher'] + inCounter['lower']\n",
     "    maxValue = max([inCounter['higher'], inCounter['lower']])\n",
     "    minValue = min([inCounter['higher'], inCounter['lower']])\n",
-    "    for trialNum in range(trials):\n",
+    "    for _trialNum in range(trials):\n",
     "        randCounter = Counter()\n",
-    "        for flipNum in range(totalSimulations):\n",
+    "        for _flipNum in range(totalSimulations):\n",
     "            if random.randint(0, 1) == 1:\n",
     "                outcome = 'higher'\n",
     "            else:\n",
@@ -615,10 +615,10 @@
     "    if inMeasure.duration.quarterLength != 2.0:\n",
     "        continue\n",
     "    outMeasure = outMeasures[i]\n",
-    "    \n",
+    "\n",
     "    for beatStart in (0, 1):\n",
-    "        beatNotes = inMeasure.getElementsByOffset(beatStart, \n",
-    "                                                  beatStart + 1, \n",
+    "        beatNotes = inMeasure.getElementsByOffset(beatStart,\n",
+    "                                                  beatStart + 1,\n",
     "                                                  includeEndBoundary=False\n",
     "                                                 ).getElementsByClass(note.NotRest)\n",
     "        beatRN = notesToRoman(beatNotes)\n",
@@ -676,7 +676,7 @@
     "                continue\n",
     "            prevInterval = interval.Interval(n, nPrev)\n",
     "            nextInterval = interval.Interval(n, nNext)\n",
-    "            \n",
+    "\n",
     "            if (prevInterval.generic.undirected in (1, 2)\n",
     "                and nextInterval.generic.undirected in (1, 2)):\n",
     "                pass\n",
@@ -737,10 +737,10 @@
     "    if inMeasure.duration.quarterLength != 2.0:\n",
     "        continue\n",
     "    outMeasure = outMeasures[i]\n",
-    "    \n",
+    "\n",
     "    for beatStart in (0, 1):\n",
-    "        beatNotes = inMeasure.getElementsByOffset(beatStart, \n",
-    "                                                  beatStart + 1, \n",
+    "        beatNotes = inMeasure.getElementsByOffset(beatStart,\n",
+    "                                                  beatStart + 1,\n",
     "                                                  includeEndBoundary=False\n",
     "                                                 ).getElementsByClass(note.NotRest)\n",
     "        beatRN = notesToRoman(beatNotes)\n",
@@ -809,10 +809,10 @@
     "    inMeasure = inMeasures[i]\n",
     "    if inMeasure.duration.quarterLength != 2.0:\n",
     "        continue\n",
-    "    \n",
+    "\n",
     "    for beatStart in (0, 1):\n",
-    "        beatNotes = inMeasure.getElementsByOffset(beatStart, \n",
-    "                                                  beatStart + 1, \n",
+    "        beatNotes = inMeasure.getElementsByOffset(beatStart,\n",
+    "                                                  beatStart + 1,\n",
     "                                                  includeEndBoundary=False\n",
     "                                                 ).getElementsByClass(note.NotRest)\n",
     "        beatRN = notesToRoman(beatNotes)\n",
@@ -990,9 +990,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
