--- a/documentation/source/usersGuide/usersGuide_44_advancedGraphing.ipynb
+++ b/documentation/source/usersGuide/usersGuide_44_advancedGraphing.ipynb
@@ -630,7 +630,7 @@
    "source": [
     "scatter2 = graph.plot.ScatterPitchClassOffset(bach)\n",
     "scatter2.doneAction = None\n",
-    "scatter2.run(callProcess=False)  \n",
+    "scatter2.run(callProcess=False)\n",
     "\n",
     "# nothing is generated because of doneAction=None\n",
     "# and (for Jupyter notebook) callProcess=False\n",
@@ -1057,7 +1057,8 @@
    "outputs": [],
    "source": [
     "def cardinalityTicks(self):\n",
-    "    names = ['rest', 'single', 'dyad', 'triad', 'tetrachord', 'pentachord', 'hexachord', 'septachord', 'octochord']\n",
+    "    names = ['rest', 'single', 'dyad', 'triad', 'tetrachord',\n",
+    "             'pentachord', 'hexachord', 'septachord', 'octochord']\n",
     "    ticks = []\n",
     "    for i in range(int(self.minValue), int(self.maxValue) + 1):\n",
     "        tickLocation = i\n",
@@ -1594,7 +1595,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "Enough with graphs!\n",
@@ -1620,9 +1624,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
