--- a/documentation/source/usersGuide/usersGuide_53_advancedCorpus.ipynb
+++ b/documentation/source/usersGuide/usersGuide_53_advancedCorpus.ipynb
@@ -95,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('/Users/josiah/Desktop',)\n"
+      "('/Users/j_wolf/Desktop',)\n"
      ]
     }
    ],
@@ -118,13 +118,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: newCorpus metadata cache: starting processing of paths: 0\n",
-      "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: filename: /var/folders/qg/klchy5t14bb2ty9pswk6c2bw0000gn/T/music21/local-newCorpus.p.gz\n",
-      "metadata.bundles: WARNING: MetadataBundle Modification Time: 1730173618.922734\n",
+      "/Users/cuthbert/Git/music21base/music21/corpus/corpora.py: WARNING: newCorpus metadata cache: starting processing of paths: 0\n",
+      "/Users/cuthbert/Git/music21base/music21/corpus/corpora.py: WARNING: cache: filename: /var/folders/bb/bmq3z9hs3njfyvpdh88z6v340000gn/T/music21/local-newCorpus.p.gz\n",
+      "metadata.bundles: WARNING: MetadataBundle Modification Time: 1767557505.539169\n",
       "metadata.bundles: WARNING: Skipped 0 sources already in cache.\n",
-      "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: writing time: 0.035 md items: 0\n",
+      "/Users/cuthbert/Git/music21base/music21/corpus/corpora.py: WARNING: cache: writing time: 0.025 md items: 0\n",
       "\n",
-      "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: filename: /var/folders/qg/klchy5t14bb2ty9pswk6c2bw0000gn/T/music21/local-newCorpus.p.gz\n"
+      "/Users/cuthbert/Git/music21base/music21/corpus/corpora.py: WARNING: cache: filename: /var/folders/bb/bmq3z9hs3njfyvpdh88z6v340000gn/T/music21/local-newCorpus.p.gz\n"
      ]
     },
     {
@@ -213,7 +213,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "## Inspecting metadata bundle search results\n",
@@ -714,7 +717,7 @@
    ],
    "source": [
     "#_DOCS_SHOW newBundle\n",
-    "print(\"<music21.metadata.bundles.MetadataBundle {1 entry}>\") # did not actually run addFromPaths... #_DOCS_HIDE"
+    "print('<music21.metadata.bundles.MetadataBundle {1 entry}>') # did not actually run addFromPaths... #_DOCS_HIDE  # noqa: E501"
    ]
   },
   {
@@ -816,9 +819,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
