--- a/documentation/source/testsAndInProgress/devTest_widgets.ipynb
+++ b/documentation/source/testsAndInProgress/devTest_widgets.ipynb
@@ -13,31 +13,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "19b1f3bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ipywidgets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "dcf5a8d7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
-    "from ipywidgets import HBox, VBox\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from IPython.display import display\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "266c65ee",
    "metadata": {
     "tags": [
@@ -48,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db17a318b9f84f73b7df446fcadb6cfa",
+       "model_id": "392725cc1ba84463b1e8c6d1c651e9d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -68,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "305a0cb0",
    "metadata": {
     "tags": [
@@ -79,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b9ca39df08947ddb827461f5011336c",
+       "model_id": "51f90c02f1434e29b48790a4fe8fc4d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,13 +81,13 @@
    ],
    "source": [
     "@widgets.interact(x=(0, 5))\n",
-    "def f(x=5):\n",
+    "def ff(x=5):\n",
     "    print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "ff27d4b0",
    "metadata": {
     "tags": [
@@ -110,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f29e3650e19247c1bbbb10ee671d25a2",
+       "model_id": "5a8c3bb0a8f14b1282a3a1b6c53f3d9f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -135,14 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "ff40bacd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0404bca7bda44684aae39116b2108ff0",
+       "model_id": "681865ea967e4cd29717577cd533b837",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,7 +138,7 @@
        "FloatSlider(value=2.0, description='Frequency:', max=10.0, min=1.0, readout_format='.1f')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,34 +156,169 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "89d69951",
+   "cell_type": "markdown",
+   "id": "a386c3a6-145c-4500-b432-6cc011264cd2",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import ipywidgets as widgets\n",
-    "from traitlets import Unicode, Int, validate"
+    "## Create a Custom Widget\n",
+    "\n",
+    "Older Jupyter provided require/define from RequireJS which gave access to Jupyter widgets.  This is no longer the case, so\n",
+    "we first need to install anywidget (since it's not part of the music21 ecosystem):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "4f113426",
+   "execution_count": 11,
+   "id": "1399ecb6-fca8-4949-a5fd-c5c817da1f7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: anywidget in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (0.9.21)\n",
+      "Requirement already satisfied: ipywidgets>=7.6.0 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from anywidget) (8.1.5)\n",
+      "Requirement already satisfied: psygnal>=0.8.1 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from anywidget) (0.15.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.2.0 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from anywidget) (4.12.2)\n",
+      "Requirement already satisfied: comm>=0.1.3 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from ipywidgets>=7.6.0->anywidget) (0.2.2)\n",
+      "Requirement already satisfied: ipython>=6.1.0 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from ipywidgets>=7.6.0->anywidget) (8.29.0)\n",
+      "Requirement already satisfied: traitlets>=4.3.1 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from ipywidgets>=7.6.0->anywidget) (5.14.3)\n",
+      "Requirement already satisfied: widgetsnbextension~=4.0.12 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from ipywidgets>=7.6.0->anywidget) (4.0.13)\n",
+      "Requirement already satisfied: jupyterlab-widgets~=3.0.12 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from ipywidgets>=7.6.0->anywidget) (3.0.13)\n",
+      "Requirement already satisfied: decorator in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets>=7.6.0->anywidget) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets>=7.6.0->anywidget) (0.19.2)\n",
+      "Requirement already satisfied: matplotlib-inline in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets>=7.6.0->anywidget) (0.1.7)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets>=7.6.0->anywidget) (3.0.48)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets>=7.6.0->anywidget) (2.18.0)\n",
+      "Requirement already satisfied: stack-data in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets>=7.6.0->anywidget) (0.6.3)\n",
+      "Requirement already satisfied: pexpect>4.3 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets>=7.6.0->anywidget) (4.9.0)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets>=7.6.0->anywidget) (0.8.4)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from pexpect>4.3->ipython>=6.1.0->ipywidgets>=7.6.0->anywidget) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from prompt-toolkit<3.1.0,>=3.0.41->ipython>=6.1.0->ipywidgets>=7.6.0->anywidget) (0.2.13)\n",
+      "Requirement already satisfied: executing>=1.2.0 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from stack-data->ipython>=6.1.0->ipywidgets>=7.6.0->anywidget) (2.1.0)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from stack-data->ipython>=6.1.0->ipywidgets>=7.6.0->anywidget) (2.4.1)\n",
+      "Requirement already satisfied: pure-eval in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from stack-data->ipython>=6.1.0->ipywidgets>=7.6.0->anywidget) (0.2.3)\n",
+      "Requirement already satisfied: six>=1.12.0 in /Users/cuthbert/Git/music21base/venv/lib/python3.13/site-packages (from asttokens>=2.1.0->stack-data->ipython>=6.1.0->ipywidgets>=7.6.0->anywidget) (1.16.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "class CounterWidget(widgets.DOMWidget):\n",
-    "    _view_name = Unicode('CounterView').tag(sync=True)\n",
-    "    _view_module = Unicode('counter').tag(sync=True)\n",
-    "    value = Int(0).tag(sync=True)"
+    "%pip install anywidget"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87331e45-4b8d-414c-9178-fcd2401cb94f",
+   "metadata": {},
+   "source": [
+    "Now create a button that synchronizes Counter value with JS value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7da0fb50",
+   "execution_count": 19,
+   "id": "9b6cdf55-1540-49ff-866c-9df4c8f9c996",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9eb1f0e8f6b9408aaed692d0bd9f7bc2",
+       "version_major": 2,
+       "version_minor": 1
+      },
+      "text/plain": [
+       "<__main__.Counter object at 0x109c752b0>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import anywidget\n",
+    "import traitlets\n",
+    "\n",
+    "\n",
+    "class Counter(anywidget.AnyWidget):\n",
+    "    _esm = r'''\n",
+    "    export function render({ model, el }) {\n",
+    "        const bm = document.createElement('button');\n",
+    "        bm.textContent = '-';\n",
+    "\n",
+    "        const bp = document.createElement('button');\n",
+    "        bp.textContent = '+';\n",
+    "\n",
+    "        const span = document.createElement('span');\n",
+    "        span.style.marginLeft = '10px';\n",
+    "        span.style.marginRight = '10px';\n",
+    "\n",
+    "        const set_span = () => {\n",
+    "            span.textContent = String(model.get('value'));\n",
+    "        };\n",
+    "\n",
+    "        bm.addEventListener('click', () => {\n",
+    "            const x = model.get('value');\n",
+    "            model.set('value', x - 1);\n",
+    "            model.save_changes();\n",
+    "        });\n",
+    "\n",
+    "        bp.addEventListener('click', () => {\n",
+    "            const x = model.get('value');\n",
+    "            model.set('value', x + 1);\n",
+    "            model.save_changes();\n",
+    "        });\n",
+    "\n",
+    "        model.on('change:value', set_span);\n",
+    "\n",
+    "        el.appendChild(bm);\n",
+    "        el.appendChild(span);\n",
+    "        el.appendChild(bp);\n",
+    "\n",
+    "        set_span();\n",
+    "    }\n",
+    "    '''\n",
+    "    value = traitlets.Int(0).tag(sync=True)\n",
+    "\n",
+    "\n",
+    "c = Counter()\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edccdca2-a4df-44b4-9029-a08b7a924d65",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "This number here will change (when reevaluated) with Counter's value changing above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7a9030b9-b5cc-43e9-8342-ffccb47de9e3",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": [
      "nbval-ignore-output"
     ]
@@ -203,167 +326,22 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": [
-       "// We make sure the `counter` module is defined\n",
-       "// only once.\n",
-       "require.undef('counter');\n",
-       "\n",
-       "// We define the `counter` module depending on the\n",
-       "// Jupyter widgets framework.\n",
-       "define('counter', [\"@jupyter-widgets/base\"],\n",
-       "       function(widgets) {\n",
-       "\n",
-       "    // We create the CounterView frontend class,\n",
-       "    // deriving from DOMWidgetView.\n",
-       "    var CounterView = widgets.DOMWidgetView.extend({\n",
-       "\n",
-       "        // This method creates the HTML widget.\n",
-       "        render: function() {\n",
-       "            // The value_changed() method should be\n",
-       "            // called when the model's value changes\n",
-       "            // on the kernel side.\n",
-       "            this.value_changed();\n",
-       "            this.model.on('change:value',\n",
-       "                          this.value_changed, this);\n",
-       "\n",
-       "            var model = this.model;\n",
-       "            var that = this;\n",
-       "\n",
-       "            // We create the plus and minus buttons.\n",
-       "            this.bm = $('<button/>')\n",
-       "            .text('-')\n",
-       "            .click(function() {\n",
-       "                // When the button is clicked,\n",
-       "                // the model's value is updated.\n",
-       "                var x = model.get('value');\n",
-       "                model.set('value', x - 1);\n",
-       "                that.touch();\n",
-       "            });\n",
-       "\n",
-       "            this.bp = $('<button/>')\n",
-       "            .text('+')\n",
-       "            .click(function() {\n",
-       "                var x = model.get('value');\n",
-       "                model.set('value', x + 1);\n",
-       "                that.touch();\n",
-       "            });\n",
-       "\n",
-       "            // This element displays the current\n",
-       "            // value of the counter.\n",
-       "            this.span = $('<span />')\n",
-       "            .text('0')\n",
-       "            .css({marginLeft: '10px',\n",
-       "                  marginRight: '10px'});\n",
-       "\n",
-       "            // this.el represents the widget's DOM\n",
-       "            // element. We add the minus button,\n",
-       "            // the span element, and the plus button.\n",
-       "            $(this.el)\n",
-       "            .append(this.bm)\n",
-       "            .append(this.span)\n",
-       "            .append(this.bp);\n",
-       "        },\n",
-       "\n",
-       "        value_changed: function() {\n",
-       "            // Update the displayed number when the\n",
-       "            // counter's value changes.\n",
-       "            var x = this.model.get('value');\n",
-       "            $($(this.el).children()[1]).text(x);\n",
-       "        },\n",
-       "    });\n",
-       "\n",
-       "    return {\n",
-       "        CounterView : CounterView\n",
-       "    };\n",
-       "});\n"
-      ],
       "text/plain": [
-       "<IPython.core.display.Javascript object>"
+       "4"
       ]
      },
+     "execution_count": 18,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%javascript\n",
-    "// We make sure the `counter` module is defined\n",
-    "// only once.\n",
-    "require.undef('counter');\n",
-    "\n",
-    "// We define the `counter` module depending on the\n",
-    "// Jupyter widgets framework.\n",
-    "define('counter', [\"@jupyter-widgets/base\"],\n",
-    "       function(widgets) {\n",
-    "\n",
-    "    // We create the CounterView frontend class,\n",
-    "    // deriving from DOMWidgetView.\n",
-    "    var CounterView = widgets.DOMWidgetView.extend({\n",
-    "\n",
-    "        // This method creates the HTML widget.\n",
-    "        render: function() {\n",
-    "            // The value_changed() method should be\n",
-    "            // called when the model's value changes\n",
-    "            // on the kernel side.\n",
-    "            this.value_changed();\n",
-    "            this.model.on('change:value',\n",
-    "                          this.value_changed, this);\n",
-    "\n",
-    "            var model = this.model;\n",
-    "            var that = this;\n",
-    "\n",
-    "            // We create the plus and minus buttons.\n",
-    "            this.bm = $('<button/>')\n",
-    "            .text('-')\n",
-    "            .click(function() {\n",
-    "                // When the button is clicked,\n",
-    "                // the model's value is updated.\n",
-    "                var x = model.get('value');\n",
-    "                model.set('value', x - 1);\n",
-    "                that.touch();\n",
-    "            });\n",
-    "\n",
-    "            this.bp = $('<button/>')\n",
-    "            .text('+')\n",
-    "            .click(function() {\n",
-    "                var x = model.get('value');\n",
-    "                model.set('value', x + 1);\n",
-    "                that.touch();\n",
-    "            });\n",
-    "\n",
-    "            // This element displays the current\n",
-    "            // value of the counter.\n",
-    "            this.span = $('<span />')\n",
-    "            .text('0')\n",
-    "            .css({marginLeft: '10px',\n",
-    "                  marginRight: '10px'});\n",
-    "\n",
-    "            // this.el represents the widget's DOM\n",
-    "            // element. We add the minus button,\n",
-    "            // the span element, and the plus button.\n",
-    "            $(this.el)\n",
-    "            .append(this.bm)\n",
-    "            .append(this.span)\n",
-    "            .append(this.bp);\n",
-    "        },\n",
-    "\n",
-    "        value_changed: function() {\n",
-    "            // Update the displayed number when the\n",
-    "            // counter's value changes.\n",
-    "            var x = this.model.get('value');\n",
-    "            $($(this.el).children()[1]).text(x);\n",
-    "        },\n",
-    "    });\n",
-    "\n",
-    "    return {\n",
-    "        CounterView : CounterView\n",
-    "    };\n",
-    "});"
+    "c.value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "a1a543f7",
    "metadata": {},
    "outputs": [],
@@ -376,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "65d42a19",
    "metadata": {
     "tags": [
@@ -387,7 +365,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdeff6f31b304772af26715ad02448a7",
+       "model_id": "dec8fbabc31c4f7e9af5cec66355f778",
        "version_major": 2,
        "version_minor": 0
       },
@@ -405,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "6c2521c7",
    "metadata": {},
    "outputs": [],
@@ -418,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "2043e94d",
    "metadata": {
     "tags": [
@@ -429,7 +407,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e08fe9c24074891bf89168264fe224b",
+       "model_id": "0d4f75ef9ae848dbbff6e5bb4168402f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -444,6 +422,14 @@
    "source": [
     "a_w(10, 20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b26edb95-d97d-42e0-976d-4bfe0bb6e737",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -463,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
