--- a/documentation/source/usersGuide/usersGuide_02_notes.ipynb
+++ b/documentation/source/usersGuide/usersGuide_02_notes.ipynb
@@ -625,6 +625,10 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": [
      "nbval-ignore-output",
      "raises-exception"
@@ -1024,7 +1028,7 @@
     }
    ],
    "source": [
-    "f.show('midi') "
+    "f.show('midi')"
    ]
   },
   {
@@ -1476,9 +1480,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
