--- a/documentation/source/usersGuide/usersGuide_18_intervals.ipynb
+++ b/documentation/source/usersGuide/usersGuide_18_intervals.ipynb
@@ -416,7 +416,7 @@
     }
    ],
    "source": [
-    "chord.Chord(\"F A C\").transpose(i)"
+    "chord.Chord('F A C').transpose(i)"
    ]
   },
   {
@@ -730,7 +730,7 @@
    ],
    "source": [
     "try:\n",
-    "    interval.Interval('ddddd5').niceName\n",
+    "    print(interval.Interval('ddddd5').niceName)\n",
     "except interval.IntervalException:\n",
     "    print(\"Can't do five ds!\")"
    ]
@@ -960,7 +960,7 @@
     }
    ],
    "source": [
-    "interval.add([\"W\", \"W\", \"H\", \"W\", \"W\", \"W\", \"H\"])"
+    "interval.add(['W', 'W', 'H', 'W', 'W', 'W', 'H'])"
    ]
   },
   {
@@ -1047,7 +1047,7 @@
     }
    ],
    "source": [
-    "s = converter.parse('4/4 c4 d e f# g# a# g f e1', format=\"tinyNotation\")\n",
+    "s = converter.parse('4/4 c4 d e f# g# a# g f e1', format='tinyNotation')\n",
     "s.show()"
    ]
   },
@@ -1403,9 +1403,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
