--- a/documentation/source/usersGuide/usersGuide_21_sorting.ipynb
+++ b/documentation/source/usersGuide/usersGuide_21_sorting.ipynb
@@ -738,7 +738,8 @@
     }
    ],
    "source": [
-    "st = sorting.SortTuple(atEnd=0, offset=10.0, priority=1, classSortOrder=4, isNotGrace=1, insertIndex=5)\n",
+    "st = sorting.SortTuple(atEnd=0, offset=10.0, priority=1,\n",
+    "                       classSortOrder=4, isNotGrace=1, insertIndex=5)\n",
     "st > 8.0"
    ]
   },
@@ -1075,7 +1076,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1089,9 +1090,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
