--- a/documentation/source/usersGuide/usersGuide_23_romanNumerals.ipynb
+++ b/documentation/source/usersGuide/usersGuide_23_romanNumerals.ipynb
@@ -114,7 +114,7 @@
     }
    ],
    "source": [
-    "kb = key.Key('B') \n",
+    "kb = key.Key('B')\n",
     "sb = stream.Part([kb, f])\n",
     "sb.show()"
    ]
@@ -562,7 +562,7 @@
     }
    ],
    "source": [
-    "subDom7 = roman.RomanNumeral(\"IV7\", \"B-\")\n",
+    "subDom7 = roman.RomanNumeral('IV7', 'B-')\n",
     "subDom7.show()"
    ]
   },
@@ -588,7 +588,7 @@
     }
    ],
    "source": [
-    "e65 = roman.RomanNumeral(\"ii65\", \"E\")\n",
+    "e65 = roman.RomanNumeral('ii65', 'E')\n",
     "e65.show()"
    ]
   },
