Update UG Chp 2 install locations
Highly unlikely that people are using D drives anymore.

Files no longer end with .pyc in the module name

--- a/documentation/source/usersGuide/usersGuide_02_notes.ipynb
+++ b/documentation/source/usersGuide/usersGuide_02_notes.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "source": [
     ">>> note # doctest: +SKIP\n",
-    "<module 'music21.note' from 'D:\\music21files\\music21\\note.pyc'>\n"
+    "<module 'music21.note' from '/Library/Frameworks/Python.framework/Versions/3.19/lib/python3.19/site-packages/music21/note.py'>\n"
    ]
   },
   {
@@ -90,12 +90,12 @@
    "metadata": {},
    "source": [
     "If you get something like this you'll have access to the music21\n",
-    "`note` module any time you type `\"note\"`.  The filename after\n",
-    "\"from 'D:\\\\music21files...'\" will differ for you.  It will show\n",
+    "`note` module any time you type `\"note\"`.  The file path\n",
+    "\"/Library/Frameworks/...\" or \"C:\\Users\\your_name\\AppData\\...\"\n",
+    "will differ for you.  It will show\n",
     "you where you have music21 installed (if you ever forget where\n",
     "you have music21 installed, this is an easy way to figure it out).  \n",
-    "As long as it ends in `note.pyc` or `note.py` or something like that\n",
-    "you're fine."
+    "As long as it ends in `music21/note.py` or `music21\\note.py` you're fine."
    ]
   },
   {
@@ -186,7 +186,7 @@
    "metadata": {},
    "source": [
     ">>> music21.note # doctest: +SKIP\n",
-    "<module 'music21.note' from 'D:\\music21files\\music21\\note.pyc'>\n",
+    "<module 'music21.note' from '/Library/Frameworks/Python.framework/Versions/3.19/lib/python3.19/site-packages/music21/note.py'>\n",
     "    "
    ]
   },
@@ -640,7 +640,7 @@
      "evalue": "cannot assign to operator (<ipython-input-17-dff15d6dca04>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-dff15d6dca04>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    b-flat = note.Note(\"B-2\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m cannot assign to operator\n"
+      "\u001B[0;36m  File \u001B[0;32m\"<ipython-input-17-dff15d6dca04>\"\u001B[0;36m, line \u001B[0;32m1\u001B[0m\n\u001B[0;31m    b-flat = note.Note(\"B-2\")\u001B[0m\n\u001B[0m    ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m cannot assign to operator\n"
      ]
     }
    ],
@@ -869,10 +869,10 @@
      "evalue": "'Note' object has no attribute 'wasWrittenByStockhausen'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-fbb7070911f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbflat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwasWrittenByStockhausen\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Note' object has no attribute 'wasWrittenByStockhausen'"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-25-fbb7070911f6>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mbflat\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mwasWrittenByStockhausen\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m: 'Note' object has no attribute 'wasWrittenByStockhausen'"
      ]
     }
    ],
@@ -1280,10 +1280,10 @@
      "evalue": "'NoneType' object has no attribute 'name'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-3f58fa9c100b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpitch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maccidental\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'name'"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-39-3f58fa9c100b>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0md\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpitch\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0maccidental\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mname\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m: 'NoneType' object has no attribute 'name'"
      ]
     }
    ],
@@ -1406,10 +1406,10 @@
      "evalue": "'Rest' object has no attribute 'pitch'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-43-38156eec5526>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpitch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Rest' object has no attribute 'pitch'"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-43-38156eec5526>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mr\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpitch\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m: 'Rest' object has no attribute 'pitch'"
      ]
     }
    ],
